# vision_bridge

./: CMakeLists.txt  CMakeLists.txt.user.18  CMakeLists.txt.user.2cca755  package.xml
include/: ros_detctor.h  ros_trainer.h
launch/: vision_bridge.launch  vision_bridge_ensenso.launch
msg/: ObjectArray.msg
src/: main.cpp  ros_detector.cpp  ros_trainer.cpp
srv/: detection.srv
